[gd_scene load_steps=18 format=3 uid="uid://bhvah4due6fou"]

[ext_resource type="Theme" uid="uid://df3h0hid3ni41" path="res://materiales/Botones.tres" id="1_phim3"]
[ext_resource type="Script" path="res://scripts/seleccion.gd" id="2_3qn0o"]
[ext_resource type="PackedScene" uid="uid://cvoi10nu7n3wr" path="res://Models/dae/tileLow_desert.dae" id="4_4xbha"]
[ext_resource type="PackedScene" uid="uid://d3inwqmj2kddp" path="res://Models/dae/plantA_desert.dae" id="5_4y1m3"]
[ext_resource type="PackedScene" uid="uid://bjplg4c2la48y" path="res://Models/dae/tileSlopeLowHigh_desert.dae" id="6_uleey"]
[ext_resource type="PackedScene" uid="uid://bgolxuse0btwo" path="res://Models/dae/rocksB_desert.dae" id="7_khmmu"]
[ext_resource type="PackedScene" uid="uid://bpkv312784cww" path="res://Models/dae/rocksA_desert.dae" id="8_3up1k"]
[ext_resource type="PackedScene" uid="uid://bqqr4gwc6gk2j" path="res://Models/dae/plantB_desert.dae" id="9_es6e0"]
[ext_resource type="PackedScene" uid="uid://cf5j1a355h5bj" path="res://Models/dae/tree_desert.dae" id="10_4247s"]
[ext_resource type="PackedScene" uid="uid://b700en8jui420" path="res://Models/dae/tileLarge_desert.dae" id="10_jqgji"]
[ext_resource type="PackedScene" uid="uid://dyasi1h760k1k" path="res://Models/dae/arrow_teamBlue.dae" id="11_gpuwc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jmba5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4gcij"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a1gsa"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_u0gty"]
sky_top_color = Color(0.0595057, 0.466811, 0.670629, 1)
sky_horizon_color = Color(0.732589, 0.630814, 0.38927, 1)
sky_cover_modulate = Color(0.962219, 0.87596, 0.836515, 1)
ground_bottom_color = Color(0.67451, 0.576471, 0.345098, 1)
ground_horizon_color = Color(0.733333, 0.631373, 0.388235, 1)

[sub_resource type="Sky" id="Sky_qiys0"]
sky_material = SubResource("ProceduralSkyMaterial_u0gty")

[sub_resource type="Environment" id="Environment_n2eeh"]
background_mode = 2
sky = SubResource("Sky_qiys0")
ambient_light_source = 3
ambient_light_color = Color(0.994689, 0.901946, 0.430528, 1)
ambient_light_energy = 7.23

[node name="seleccion" type="Node3D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_phim3")
script = ExtResource("2_3qn0o")

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]

[node name="VboxContainer" type="VBoxContainer" parent="Control/CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 127.0
offset_right = 8.0
offset_bottom = 288.0
grow_horizontal = 2
theme = ExtResource("1_phim3")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CanvasLayer/VboxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/CanvasLayer/VboxContainer/HBoxContainer"]
layout_mode = 2
text = "Cantidad de jugadores"

[node name="CantJugadores" type="OptionButton" parent="Control/CanvasLayer/VboxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_jmba5")
item_count = 3
popup/item_0/text = "2 Jugadores"
popup/item_1/text = "3 Jugadores"
popup/item_1/id = 1
popup/item_2/text = "4 Jugadores"
popup/item_2/id = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/CanvasLayer/VboxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/CanvasLayer/VboxContainer/HBoxContainer2"]
layout_mode = 2
text = "Cantidad de rondas"

[node name="CantRondas" type="OptionButton" parent="Control/CanvasLayer/VboxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_4gcij")
item_count = 5
popup/item_0/text = "1 ronda"
popup/item_1/text = "2 rondas"
popup/item_1/id = 1
popup/item_2/text = "3 rondas"
popup/item_2/id = 2
popup/item_3/text = "4 rondas"
popup/item_3/id = 3
popup/item_4/text = "5 rondas"
popup/item_4/id = 4

[node name="Button" type="Button" parent="Control/CanvasLayer/VboxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_a1gsa")
text = "Aceptar"

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.353553, 0.353554, 0, 0.707107, 0.707106, -0.5, -0.612372, 0.612373, 0, 2.72995, 0)
light_color = Color(0.604686, 0.592496, 0.208036, 1)
light_energy = 3.225
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_n2eeh")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.170994, -0.029446, 0.984832, 0.0281078, 0.999292, 0.0249981, -0.984871, 0.0234069, 0.171701, 11.4636, 1.90098, 0.509487)
keep_aspect = 0
fov = 31.2288

[node name="tileLow_desert" parent="." instance=ExtResource("4_4xbha")]
transform = Transform3D(0.869547, 0, -0.493851, 0, 1, 0, 0.493851, 0, 0.869547, -0.763296, 0.675142, -0.954525)

[node name="plantA_desert" parent="." instance=ExtResource("5_4y1m3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.740845, 0.973694, -0.650165)

[node name="plantA_desert2" parent="." instance=ExtResource("5_4y1m3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.46079, 0.922415, 0.707492)

[node name="tileLow_desert2" parent="." instance=ExtResource("4_4xbha")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.7263, 0.0918813, 2.36219)

[node name="tileLow_desert3" parent="." instance=ExtResource("4_4xbha")]
transform = Transform3D(0.715473, 0, -0.69864, 0, 1, 0, 0.69864, 0, 0.715473, 3.48391, 0.160998, -1.6993)

[node name="tileLow_desert4" parent="." instance=ExtResource("4_4xbha")]
transform = Transform3D(0.994567, 0, -0.104095, 0, 1, 0, 0.104095, 0, 0.994567, -4.49251, 0.146521, -4.06795)

[node name="tileSlopeLowHigh_desert" parent="." instance=ExtResource("6_uleey")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.04107, 0, 2.51169)

[node name="rocksB_desert" parent="." instance=ExtResource("7_khmmu")]
transform = Transform3D(1.19741, 0, 0, 0, 1.14308, 0, 0, 0, 1.17466, -2.85709, 0.921772, 0.738695)

[node name="rocksA_desert" parent="." instance=ExtResource("8_3up1k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2267, 0.966841, -4.32969)

[node name="rocksB_desert2" parent="." instance=ExtResource("7_khmmu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.95332, 0.959587, 1.39195)

[node name="plantB_desert" parent="." instance=ExtResource("9_es6e0")]
transform = Transform3D(1.05396, 0, 0, 0, 1.66982, 0, 0, 0, 1, 4.07115, 1.10683, -1.66312)

[node name="tree_desert3" parent="." instance=ExtResource("10_4247s")]
transform = Transform3D(-0.588355, 0, -0.517679, 0, 0.984293, 0, 0.519329, 0, -0.589892, -5.71571, 0.833454, -3.2782)

[node name="tree_desert" parent="." instance=ExtResource("10_4247s")]
transform = Transform3D(0.648224, 0, -0.117309, 0, 0.871349, 0, 0.111502, 0, 0.681986, -3.92366, 1.04818, 0.998208)

[node name="tree_desert2" parent="." instance=ExtResource("10_4247s")]
transform = Transform3D(0.559116, 0, 0.233961, 0, 1, 0, -0.166626, 0, 0.785055, -2.39185, 0.578865, -4.83096)

[node name="tileLarge_desert" parent="." instance=ExtResource("10_jqgji")]
transform = Transform3D(1.87, 0, 0, 0, 1.807, 0, 0, 0, 1.87, -0.427, -0.826282, -1.017)

[node name="arrow_teamBlue" parent="." instance=ExtResource("11_gpuwc")]
transform = Transform3D(1, 0, 0, 0, 0.990095, 0.1404, 0, -0.1404, 0.990095, -4.19003, 1.44564, -3.81777)

[connection signal="item_selected" from="Control/CanvasLayer/VboxContainer/HBoxContainer/CantJugadores" to="Control" method="_on_cant_jugadores_item_selected"]
[connection signal="item_selected" from="Control/CanvasLayer/VboxContainer/HBoxContainer2/CantRondas" to="Control" method="_on_cant_rondas_item_selected"]
